--- a/OS_Lab5/CMakeLists.txt
+++ b/OS_Lab5/CMakeLists.txt
@@ -3,5 +3,5 @@ project(OS_Lab5)
 
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES main.c Vector.h)
+set(SOURCE_FILES main.c Vector.h Vector.c)
 add_executable(OS_Lab5 ${SOURCE_FILES})
